bonus/confs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: dev
  labels:
    app: ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: will-app.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: will-app-service
            port:
              number: 8888
  # - http:
  #     paths:
  #     - path: /argocd
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: argocd-server
  #           port:
  #             number: 8080
